--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "letrus-hiring",
+  "name": "red_test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -37,6 +37,7 @@
     "react": "^16.5.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
+    "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
